# intel-features

./: Cargo.toml  PLAN.md  README.md  TRADEMARKS.md
.github/workflows/: ci.yml
src/: catalog.rs  cpu_db.rs  lib.rs  main.rs  model.rs  report.rs
src/probes/: acpi.rs  cpuid.rs  firmware.rs  mod.rs  msr.rs  pci.rs  procfs.rs  sysfs.rs  vulns.rs
tests/: integration.rs  probe_fixtures.rs
