[package]
name = "intel-features"
version = "0.1.0"
edition = "2021"
description = "Modular detector for Intel® processor and platform features"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.186"
raw-cpuid = "11.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "intel_features"
path = "src/lib.rs"

[[bin]]
name = "intel-features"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
